--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,4 @@ cache:
 before_install:
   - chmod +x mvnw
 install:
-  - ./mvnw install -B -V -Dmaven.test.skip=true
-  - ./mvnw javadoc:javadoc
+  - ./mvnw install
